Fix the navbar overflow

--- a/public/output.css
+++ b/public/output.css
@@ -990,6 +990,12 @@ video {
     z-index: 5;
   }
 
+  .header-2 {
+    height: 390px;
+    display: flex;
+    flex-direction: column;
+  }
+
   .mobile-menu {
     display: none;
     /* Hidden initially */
